compiler/tests/success/slh/x86-64/protect_256.jazz
export
fn foo (reg u256 x) -> reg u256 {
    reg u64 msf;
    msf = #init_msf();

    reg u256 y;
    y = #protect_256(x, msf);

    return y;
}
