compiler/tests/fail/x86-64/swap128.jazz
export
fn main(reg u128 x y) -> reg u128, reg u128 {
  y, x = #swap(x, y);
  return y, x;
}
